presentation day push

--- a/src/components/FederalElectionChoice/FederalElectionChoice.css
+++ b/src/components/FederalElectionChoice/FederalElectionChoice.css
@@ -42,7 +42,7 @@
     margin-bottom: 20px;
 }
 
-.federal-choice-buttons {
+.federal-landing-buttons {
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
